# simple_casadi_mpc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  cartpole__problem_8hpp_source.html  casadi__utils_8hpp_source.html  classCartpoleProb-members.html  classCartpoleProb.html  classCartpoleProb__coll__graph.map  classCartpoleProb__coll__graph.md5  classDiffDriveProb-members.html  classDiffDriveProb.html  classDiffDriveProb__inherit__graph.map  classDiffDriveProb__inherit__graph.md5  classDoubleIntegratorProb-members.html  classDoubleIntegratorProb.html  classDoubleIntegratorProb__coll__graph.md5  classDoubleIntegratorProb__inherit__graph.map  classInvertedPendulumProb-members.html  classInvertedPendulumProb.html  classInvertedPendulumProb__inherit__graph.map  classInvertedPendulumProb__inherit__graph.md5  classes.html  classsimple__casadi__mpc_1_1CompiledMPC-members.html  classsimple__casadi__mpc_1_1CompiledMPC.html  classsimple__casadi__mpc_1_1CompiledMPC.js  classsimple__casadi__mpc_1_1CompiledMPC__coll__graph.md5  classsimple__casadi__mpc_1_1CompiledMPC__inherit__graph.map  classsimple__casadi__mpc_1_1JITMPC-members.html  classsimple__casadi__mpc_1_1JITMPC.html  classsimple__casadi__mpc_1_1JITMPC__coll__graph.map  classsimple__casadi__mpc_1_1JITMPC__coll__graph.md5  classsimple__casadi__mpc_1_1MPC-members.html  classsimple__casadi__mpc_1_1MPC.html  classsimple__casadi__mpc_1_1MPC__inherit__graph.map  classsimple__casadi__mpc_1_1MPC__inherit__graph.md5  classsimple__casadi__mpc_1_1Problem-members.html  (+30 more)
.github/workflows/: build.yml  docs.yml
benchmark/: cartpole_mpc_codegen.cpp  cartpole_mpc_solver_bench.cpp  cartpole_problem.hpp
cmake/: simple_casadi_mpcConfig.cmake.in  simple_casadi_mpc_codegen.cmake
doc/: Doxyfile  custom.css  header.html
example/: cartpole_mpc_codegen.cpp  cartpole_mpc_codegen_example.cpp  cartpole_mpc_example.cpp  cartpole_mpc_jit_example.cpp  cartpole_problem.hpp  diff_drive_mpc_example.cpp  double_integrator_mpc_codegen.cpp  double_integrator_mpc_compiled_example.cpp  double_integrator_mpc_example.cpp  double_integrator_problem.hpp  inverted_pendulum_mpc_example.cpp  simple_mpc_example.cpp
include/: simple_casadi_mpc.hpp
include/simple_casadi_mpc/: casadi_utils.hpp  simple_casadi_mpc.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  pages_0.js  searchdata.js
